formatted code slightly

--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 
     <!-- Description Jumbotron -->
     <div class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero">
-      <img id="hero-logo" src="./assets/img/MusicMap_logo_clear.png" alt="MusicMap Logo">
+      <img
+        id="hero-logo"
+        src="./assets/img/MusicMap_logo_clear.png"
+        alt="MusicMap Logo"
+      />
       <h1 class="mb-4 display-1 logo-font hero-title">MusicMap</h1>
       <p class="col-sm-6 m-auto mb-4 main-font hero-text">
         MusicMap is a versatile web application allowing users to search for
@@ -114,21 +118,29 @@
 
           <!-- History Dropdown -->
           <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a
+              class="btn btn-secondary dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
               History
-            </a>          
-            <ul class="dropdown-menu" id="dropdownList">
-            </ul>
+            </a>
+            <ul class="dropdown-menu" id="dropdownList"></ul>
           </div>
-
-          
 
           <!-- Selection box -->
           <div class="col form-check accent-font">
             <legend>Event Timings:</legend>
             <div class="">
               <label for="checkbox-1" class="px-2">Past</label>
-              <input type="checkbox" name="checkbox-1" id="checkbox-1" class="form-check-input nopadding"/>
+              <input
+                type="checkbox"
+                name="checkbox-1"
+                id="checkbox-1"
+                class="form-check-input nopadding"
+              />
             </div>
             <div class="">
               <label for="checkbox-2" class="px-2">Upcoming</label>
@@ -168,11 +180,22 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" >
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
               What is MusicMap?
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div
+            id="collapseOne"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               <strong>MusicMap</strong> is a web application designed to help
               users explore upcoming and past concerts of their favorite
@@ -184,43 +207,77 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
               How do I use MusicMap?
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               Enter the name of the musician you're interested in, and
-              <strong>MusicMap</strong> will display an interactive map showcasing
-              their past and upcoming concerts. You can toggle between past and
-              upcoming events, and for additional context, access the artist's
-              social media links displayed on the platform. Click on each event to
-              access detailed information about venues, dates, and locations.
+              <strong>MusicMap</strong> will display an interactive map
+              showcasing their past and upcoming concerts. You can toggle
+              between past and upcoming events, and for additional context,
+              access the artist's social media links displayed on the platform.
+              Click on each event to access detailed information about venues,
+              dates, and locations.
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" >
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseThree"
+              aria-expanded="false"
+              aria-controls="collapseThree"
+            >
               Can I search for a specific venue or location?
             </button>
           </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+          <div
+            id="collapseThree"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               Currently, <strong>MusicMap</strong> focuses on searching for
-              musicians rather than specific venues or locations. The platform is
-              designed to provide a comprehensive overview of an artist's concert
-              history and future performances.
+              musicians rather than specific venues or locations. The platform
+              is designed to provide a comprehensive overview of an artist's
+              concert history and future performances.
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" >
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseFour"
+              aria-expanded="false"
+              aria-controls="collapseFour"
+            >
               Is MusicMap free to use?
             </button>
           </h2>
-          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+          <div
+            id="collapseFour"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               Yes, <strong>MusicMap</strong> is a free-to-use web application.
               There are no subscription fees or hidden charges associated with
@@ -230,11 +287,22 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" >
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseFive"
+              aria-expanded="false"
+              aria-controls="collapseFive"
+            >
               How frequently is the concert information updated?
             </button>
           </h2>
-          <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+          <div
+            id="collapseFive"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               The concert data on <strong>MusicMap</strong> is regularly updated
               to ensure accuracy and relevancy. However, we recommend checking
@@ -245,11 +313,22 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" >
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseSix"
+              aria-expanded="false"
+              aria-controls="collapseSix"
+            >
               Is there a feature to purchase tickets through MusicMap Connect?
             </button>
           </h2>
-          <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+          <div
+            id="collapseSix"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
             <div class="accordion-body">
               Currently, <strong>MusicMap</strong> does not facilitate ticket
               purchases. The platform serves as a tool for concert exploration,
