--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
       </div>
     </div>
 
+    <!-- Break -->
+    <br>
+
     <!-- Bootstrap JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
