--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a class="nav-link active accent-font" aria-current="page" href="#"
               >Home</a
             >
-            <a class="nav-link accent-font" href="#">About</a>
+            <a class="nav-link accent-font" href="#faq">FAQ</a>
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@
     </section>
 
     <!-- FAQ -->
-    <div class="container">
+    <div class="container" id="faq">
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
