refactored JS code so no repeating functions and code. Pull branch to test before merging (just incase)

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Local JavaScripts -->
-    <script type="module" src="assets/js/map.js"></script>
-    <script src="assets/js/BandsAPI.js"></script>
+    <script type="module" src="assets/js/maps.js"></script>
+    <script src="assets/js/bands.js"></script>
     <!--Map API script-->
     <script>
       ((g) => {
