Added gif of crying face when no artist found and amended some image alts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="navbar-brand" href="#">
             <img
               src="assets/img/MusicMap_logo_clear.svg"
-              alt="Logo"
+              alt="MusicMap Logo"
               width="30"
               height="24"
               class="d-inline-block align-text-top"
