Started media queries

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     </nav>
 
     <!-- Description Jumbotron -->
-    <section class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero">
+    <section
+      class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero"
+    >
       <img
         id="hero-logo"
         src="./assets/img/MusicMap_logo_clear.png"
@@ -165,7 +167,7 @@
       <div id="map"></div>
 
       <!-- Display Artist Information -->
-      <article class="card mb-3">
+      <article class="card mb-3" id="artistCard">
         <div class="row g-0" id="results">
           <div class="col-md-4" id="artistImg"></div>
           <div class="row accent-font">
