Added some media queries. Positioning of the artist display card moves and hero text adjusts. Work still needed for very small screens

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     </nav>
 
     <!-- Description Jumbotron -->
-    <section class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero">
+    <section
+      class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero"
+    >
       <img
         id="hero-logo"
         src="./assets/img/MusicMap_logo_clear.png"
