--- a/index.html
+++ b/index.html
@@ -178,6 +178,24 @@
       </article>
     </section>
 
+    <!-- Tickets -->
+    <div class="container" id="ticketContainer">
+      <div class="card text-center" id="tickets">
+        <div class="card-header">
+          Please Search Artist To See Tickets
+        </div>
+        <div class="card-body" id="ticketsBody">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <a href="https://www.ticketmaster.co.uk" target="blank" class="btn btn-primary">You can buy tickets here</a>
+        </div>
+        <div class="card-footer text-body-secondary">
+          No Event Timings
+        </div>
+      </div>
+    </div>
+
+    
     <!-- FAQ -->
     <article class="container" id="faq">
       <div class="accordion" id="accordionExample">
