Show/Hide for Tickets Function

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </section>
 
     <!-- Tickets -->
-    <div class="container" id="ticketContainer">
+
+    <div class="container hidden" id="ticketContainer">
     </div>
-
+    
     <br>
-
     
     <!-- FAQ -->
     <article class="container" id="faq">
