--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
       </article>
     </section>
 
-    <!-- Tickets -->
-
+    <!-- Tickets -->    
+    <h1 id="ticketH1" class="hidden">Tickets:</h1>
     <div class="container hidden" id="ticketContainer">
     </div>
     
