Added media queriy positioning

--- a/index.html
+++ b/index.html
@@ -178,13 +178,12 @@
       </article>
     </section>
 
-    <!-- Tickets -->    
+    <!-- Tickets -->
     <h1 id="ticketH1" class="hidden">Tickets:</h1>
-    <div class="container hidden" id="ticketContainer">
-    </div>
-    
-    <br>
-    
+    <div class="container hidden" id="ticketContainer"></div>
+
+    <br />
+
     <!-- FAQ -->
     <article class="container" id="faq">
       <div class="accordion" id="accordionExample">
