Fixed hero sizing

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- Hamburger menu -->
         <button
-          class="navbar-toggler"
+          class="navbar-toggler position-absolute top-0 end-0"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNavAltMarkup"
