Made logo light blue

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="assets/img/MusicMap_logo_clear.svg"
+              src="assets/img/MusicMap_logo_lightBlue.png"
               alt="MusicMap Logo"
               width="30"
               height="24"
